sonsr issues